fix: fixed the layout problem

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,7 +1,6 @@
-.article-bg {
+
     
-    
-}
+
 
 #worship {
     height: 16em;
